--- a/Snake3D_with_collision/tsconfig.json
+++ b/Snake3D_with_collision/tsconfig.json
@@ -10,10 +10,10 @@
     // "declaration": true, /*                   Generates corresponding '.d.ts' file. */
     // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "sourceMap": true, /*                     Generates corresponding '.map' file. */
-    // "outFile": "../Build/FudgeCore.js", /*        Concatenate and emit output to single file. */
+    "outFile": "./main.js", /*        Concatenate and emit output to single file. */
     // "outDir": "..",                         /* Redirect output structure to the directory. */
-    // "sourceRoot": "./src/",
-    // "rootDir": "./src/",                    /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "sourceRoot": "./",
+    "rootDir": "./",                    /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true, /*                     Enable project compilation */
     "removeComments": false, /*               Do not emit comments to output. */
     // "noEmit": true,                        /* Do not emit outputs. */
@@ -55,5 +55,5 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     "skipLibCheck": true
   },
-  "exclude": ["W19/*", "Snake3D_with_collision/*"]
+  "exclude": ["W19/*"]
 }
